Test both BIG and LITTLE ENDIAN in bincopy_decimal_range.test

--- a/sql/test/bincopy/Tests/bincopy_decimal_range.test.in
+++ b/sql/test/bincopy/Tests/bincopy_decimal_range.test.in
@@ -5,14 +5,20 @@ statement ok
 CREATE TABLE foo(i INT)
 
 statement ok
-COPY BIG ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/be123.bin'
+COPY LITTLE ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/maxint.le'
 
 statement ok
-COPY BIG ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/maxint.bin'
+COPY BIG ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/123.be'
+
+statement ok
+COPY BIG ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/maxint.be'
 
 query I nosort
 SELECT i FROM foo
 ----
+2147483647
+2147483647
+2147483647
 1
 2
 3
@@ -23,6 +29,9 @@ SELECT i FROM foo
 statement ok
 ROLLBACK
 
+
+
+
 statement ok
 START TRANSACTION
 
@@ -30,7 +39,7 @@ statement ok
 CREATE TABLE foo(d DECIMAL(8,2))
 
 statement ok
-COPY BIG ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/be123.bin'
+COPY BIG ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/123.be'
 
 query T nosort
 SELECT CAST(d AS TEXT) FROM foo
@@ -40,7 +49,32 @@ SELECT CAST(d AS TEXT) FROM foo
 0.03
 
 statement error
-COPY BIG ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/maxint.bin'
+COPY BIG ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/maxint.be'
+
+statement ok
+ROLLBACK
+
+
+
+
+statement ok
+START TRANSACTION
+
+statement ok
+CREATE TABLE foo(d DECIMAL(8,2))
+
+statement ok
+COPY LITTLE ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/123.le'
+
+query T nosort
+SELECT CAST(d AS TEXT) FROM foo
+----
+0.01
+0.02
+0.03
+
+statement error
+COPY LITTLE ENDIAN BINARY INTO foo FROM E'$QTSTTRGDIR/maxint.le'
 
 statement ok
 ROLLBACK
