--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -382,6 +382,7 @@ CONDITIONALS = {
     'HAVE_GETENTROPY'      : "@HAVE_GETENTROPY_FALSE@",
     'NATIVE_WIN32'         : "@NATIVE_WIN32_FALSE@",
     'NOT_WIN32'            : "@NOT_WIN32_FALSE@",
+    'SANITIZER'            : "@SANITIZER_FALSE@",
     # unknown at compile time;
     # hence, we set them only at runtime in main() below
     'KNOWNFAIL'            : False, # skip on release branch when not in testweb
