--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -94,6 +94,9 @@ endif(HAVE_GETENTROPY)
 if (NOT WIN32)
   set(NOT_WIN32_FALSE "#")
 endif()
+if (SANITIZER)
+  set(SANITIZER_FALSE "#")
+endif()
 
 configure_file(Mtest.py.in
   ${CMAKE_CURRENT_BINARY_DIR}/Mtest.py
