Ensure decimal testdata does not go out of range

--- a/clients/examples/C/CMakeLists.txt
+++ b/clients/examples/C/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(bincopydata
   bincopydata.h
   bincopytemporaldata.c
   bincopyuuid.c
+  bincopydecimal_impl.h
   )
 
 target_link_libraries(bincopydata
