--- a/clients/odbc/winsetup/setup.rc
+++ b/clients/odbc/winsetup/setup.rc
@@ -103,7 +103,7 @@ END
 // Dialog
 //
 
-IDD_SETUP_DIALOG DIALOGEX 0, 0, 210, 163
+IDD_SETUP_DIALOG DIALOGEX 0, 0, 226, 163
 STYLE DS_MODALFRAME | WS_CAPTION
 CAPTION "MonetDB Data Source Configuration"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
@@ -114,15 +114,17 @@ BEGIN
     EDITTEXT        IDC_EDIT_HOST,75,88,128,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_PORT,75,104,128,14,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_DATABASE,75,120,128,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,7,141,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,153,141,50,14
+    EDITTEXT        IDC_EDIT_LOGFILE,75,136,128,14,ES_AUTOHSCROLL
     LTEXT           "Data Source Name",IDC_STATIC,7,42,63,8
     LTEXT           "User Name",IDC_STATIC,7,58,36,8
     LTEXT           "Password",IDC_STATIC,7,74,32,8
     LTEXT           "Host",IDC_STATIC,7,90,16,8
     LTEXT           "Port",IDC_STATIC,7,106,14,8
-    CONTROL         2003,IDC_STATIC,"Static",SS_BITMAP,0,0,240,37
     LTEXT           "Database",IDC_STATIC,7,122,32,8
+    LTEXT           "Logfile",IDC_STATIC,7,138,32,8
+    DEFPUSHBUTTON   "OK",IDOK,7,157,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,153,157,50,14
+    CONTROL         2003,IDC_STATIC,"Static",SS_BITMAP,0,0,240,37
 END
 
 
@@ -137,9 +139,9 @@ BEGIN
     IDD_SETUP_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 203
+        RIGHTMARGIN, 155
         TOPMARGIN, 7
-        BOTTOMMARGIN, 155
+        BOTTOMMARGIN, 219
     END
 END
 #endif    // APSTUDIO_INVOKED
