Reenable buffering of stdout on Windows. The Windows command window is so abominable, we need to buffer the output there.  This change adds calls to fflush in relevant places.

--- a/tools/mserver/monet_version.c.in
+++ b/tools/mserver/monet_version.c.in
@@ -93,4 +93,5 @@ monet_version(void)
 	printf("Compiled by: %s (%s)\n", "@builtby@", HOST);
 	printf("Compilation: %s\n", "@compilercall@");
 	printf("Linking    : %s\n", "@linkercall@");
+	fflush(stdout);
 }
