v1 sha256 atom needs a no NULL column

--- a/monetdb5/modules/atoms/CMakeLists.txt
+++ b/monetdb5/modules/atoms/CMakeLists.txt
@@ -24,7 +24,8 @@ target_sources(atoms
   inet.c
   identifier.c
   xml.c xml.h
-  batxml.c)
+  batxml.c
+  sha256.c)
 
 target_include_directories(atoms
   PRIVATE
