add support for loading file via select * from 'file name'; this is a modular interface, by default only csv files are supported. Using module other types could be added.

--- a/sql/server/CMakeLists.txt
+++ b/sql/server/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(sqlserver STATIC)
 
 set(sqlserver_public_headers
   ${CMAKE_CURRENT_SOURCE_DIR}/sql_parser.h
+  ${CMAKE_CURRENT_SOURCE_DIR}/rel_file_loader.h
   ${CMAKE_CURRENT_SOURCE_DIR}/sql_mvc.h)
 
 target_sources(sqlserver
@@ -61,6 +62,7 @@ target_sources(sqlserver
   rel_psm.c
   rel_xml.c
   rel_dump.c
+  rel_file_loader.c
   rel_dump.h rel_exp.h rel_rel.h
   rel_basetable.h
   rel_rewriter.h
@@ -90,6 +92,7 @@ target_sources(sqlserver
   sql_symbol.h
   sql_tokens.h
   sql_partition.h
+  rel_file_loader.h
   ${BISON_sqlparser_OUTPUT_HEADER}
   ${BISON_sqlparser_OUTPUT_SOURCE}
   PUBLIC
