install some more header files

--- a/common/stream/CMakeLists.txt
+++ b/common/stream/CMakeLists.txt
@@ -117,6 +117,7 @@ endif()
 
 install(TARGETS
   stream
+  COMPONENT stream
   EXPORT streamTargets
   RUNTIME
   DESTINATION ${CMAKE_INSTALL_BINDIR}
