--- a/sql/backends/monet5/vaults/csv/CMakeLists.txt
+++ b/sql/backends/monet5/vaults/csv/CMakeLists.txt
@@ -20,6 +20,7 @@ target_include_directories(csv
 target_link_libraries(csv
     PRIVATE
     monetdb_config_header
+    sqlserver
     sqlinclude
     sql
     monetdb5
