more component fixing in resulting cmake files

--- a/common/stream/CMakeLists.txt
+++ b/common/stream/CMakeLists.txt
@@ -129,10 +129,9 @@ install(TARGETS
   DESTINATION ${CMAKE_INSTALL_LIBDIR}
   COMPONENT stream
   PUBLIC_HEADER
-  COMPONENT streamdev
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/monetdb
-  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-  COMPONENT streamdev)
+  COMPONENT streamdev
+  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 install(EXPORT streamTargets
   FILE streamTargets.cmake
