Use sigsetjmp/siglongjmp when available, and don't save signal mask. Not saving the mask is default on Linux and the desired behavior, but on the Mac, it is not the default and causes mserver5 to be unstoppable after a call to eb_error (longjmp).

--- a/monetdb_config.h.in
+++ b/monetdb_config.h.in
@@ -158,6 +158,7 @@
 #cmakedefine HAVE_SETSID 1
 #cmakedefine HAVE_SHUTDOWN 1
 #cmakedefine HAVE_SIGACTION 1
+#cmakedefine HAVE_SIGLONGJMP 1
 #cmakedefine HAVE_STPCPY 1
 #cmakedefine HAVE_STRCASESTR 1
 #cmakedefine HAVE_STRNCASECMP 1
