Use Mtest.py instead of Mz.py.

--- a/testing/monetdb_mtest.bat.in
+++ b/testing/monetdb_mtest.bat.in
@@ -10,4 +10,4 @@
 
 set PATH=@CMAKE_INSTALL_FULL_LIBDIR@;@CMAKE_INSTALL_FULL_LIBDIR@\monetdb5;@CMAKE_INSTALL_FULL_BINDIR@;%PATH%
 cd "@CMAKE_HOME_DIRECTORY@"
-@CMAKE_INSTALL_FULL_BINDIR@/Mz.py.bat
+@CMAKE_INSTALL_FULL_BINDIR@/Mtest.py.bat --no-html
