--- a/testing/monetdb_mtest.sh.in
+++ b/testing/monetdb_mtest.sh.in
@@ -8,6 +8,6 @@
 # Copyright 1997 - July 2008 CWI, August 2008 - 2023 MonetDB B.V.
 
 cd "@CMAKE_HOME_DIRECTORY@"
-PATH=@CMAKE_INSTALL_FULL_BINDIR@:$PATH @CMAKE_INSTALL_FULL_BINDIR@/Mz.py
+PATH=@CMAKE_INSTALL_FULL_BINDIR@:$PATH @CMAKE_INSTALL_FULL_BINDIR@/Mtest.py --no-html
 
 #exit 0
