Added SQL standard INFORMATION_SCHEMA schema and first standard views: SCHEMATA, TABLES, VIEWS, COLUMNS and CHARACTER_SETS.

--- a/sql/scripts/CMakeLists.txt
+++ b/sql/scripts/CMakeLists.txt
@@ -38,6 +38,7 @@ install(FILES
   76_dump.sql
   80_statistics.sql
   81_tracer.sql
+  91_information_schema.sql
   99_system.sql
   DESTINATION ${CMAKE_INSTALL_LIBDIR}/monetdb5/createdb)
 
