Set sql_debug=4 so deltas in append only tables are not logged into WAL. New function to explicitly persist deltas in append only tables.

--- a/sql/backends/monet5/CMakeLists.txt
+++ b/sql/backends/monet5/CMakeLists.txt
@@ -113,6 +113,7 @@ set(include_sql_files
   58_hot_snapshot
   75_storagemodel
   76_dump
+  77_storage
   80_statistics
   81_tracer
   91_information_schema)
