--- a/monetdb_config.h.in
+++ b/monetdb_config.h.in
@@ -166,6 +166,7 @@
 #cmakedefine HAVE_SYSCONF 1
 #cmakedefine HAVE_TASK_INFO 1
 #cmakedefine HAVE_TIMES 1
+#cmakedefine HAVE_TM_GMTOFF 1
 #cmakedefine HAVE_UNAME 1
 // #cmakedefine HAVE_SEMTIMEDOP
 #cmakedefine HAVE_PTHREAD_KILL 1
