--- a/debian/rules
+++ b/debian/rules
@@ -57,3 +57,6 @@ override_dh_auto_install:
 	rm debian/tmp/usr/lib/*/monetdb5/lib_opt_sql_append.so
 	rm debian/tmp/usr/lib/*/monetdb5/lib_microbenchmark*.so
 	rm debian/tmp/usr/lib/*/monetdb5/lib_udf*.so
+
+override_dh_installsystemd:
+	dh_installsystemd --no-enable --no-start
