Add CMake magic for OpenSSL

--- a/common/stream/CMakeLists.txt
+++ b/common/stream/CMakeLists.txt
@@ -67,6 +67,7 @@ target_link_libraries(stream
   $<$<BOOL:${LIBLZMA_FOUND}>:LibLZMA::LibLZMA>
   $<$<BOOL:${LZ4_FOUND}>:LZ4::LZ4>
   $<$<BOOL:${Iconv_FOUND}>:Iconv::Iconv>
+  $<$<BOOL:${OPENSSL_FOUND}>:OpenSSL::SSL>
   matomic
   monetdb_config_header
   $<$<PLATFORM_ID:Windows>:ws2_32>
