--- a/monetdb_config.h.in
+++ b/monetdb_config.h.in
@@ -196,6 +196,7 @@
 #cmakedefine HAVE_RTREE 1
 #cmakedefine HAVE_SHP 1
 #cmakedefine HAVE_LIBPY3 1
+#cmakedefine HAVE_OPENSSL 1
 
 // #cmakedefine SOCKET_LIBRARIES
 #cmakedefine HAVE_GETADDRINFO 1
