--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -379,6 +379,7 @@ CONDITIONALS = {
     'HAVE_LIBZ'            : "@HAVE_LIBZ_FALSE@",
     'HAVE_NETCDF'          : "@HAVE_NETCDF_FALSE@",
     'HAVE_ODBC'            : "@HAVE_ODBC_FALSE@",
+    'HAVE_OPENSSL'         : "@HAVE_OPENSSL_FALSE@",
     'HAVE_PROJ'            : "@HAVE_PROJ_FALSE@",
     'HAVE_SHP'             : "@HAVE_SHP_FALSE@",
     'HAVE_GETENTROPY'      : "@HAVE_GETENTROPY_FALSE@",
