run mtest as well on github

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -49,6 +49,10 @@ jobs:
         run: |
           cd build 
           cmake --build . --target test
+      - name: mtest 
+        run: |
+          cd build 
+          cmake --build . --target mtest
           #-
           #uses: actions/upload-artifact@v3
           #name: Publish Linux binary wheels
