--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -52,8 +52,9 @@ jobs:
         run: pip3 install pymonetdb
       - name: mtest 
         run: |
-          cd build 
-          cmake --build . --target mtest
+          #cd build 
+          #cmake --build . --target mtest
+          Mtest.py -r --debug=0
           #-
           #uses: actions/upload-artifact@v3
           #name: Publish Linux binary wheels
