--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           #cd build 
           #cmake --build . --target mtest
-          $HOME/${{ matrix.branch }}/Mtest.py -r --debug=0
+          $HOME/${{ matrix.branch }}/bin/Mtest.py -r --debug=0
           #-
           #uses: actions/upload-artifact@v3
           #name: Publish Linux binary wheels
