--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -56,9 +56,9 @@ jobs:
           #cd build 
           #cmake --build . --target mtest
           PATH=$HOME/${{ matrix.branch }}/bin:$PATH $HOME/${{ matrix.branch }}/bin/Mtest.py -r --debug=0
-          #-
-          #uses: actions/upload-artifact@v3
-          #name: Publish Linux binary wheels
-          #with:
-          #name: monetdbe-linux-wheel-${{ matrix.branch }}-${{ matrix.python-version }}
-          #path: dist/*.whl
+      - name: Results
+        uses: actions/upload-artifact@v3
+          name: Publish mtest results
+          with:
+            name: mtest-${{ matrix.branch }}
+            path: ${{ matrix.branch }}/mTests
