test artifacts with files in the directory

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -55,10 +55,10 @@ jobs:
         run: |
           #cd build 
           #cmake --build . --target mtest
-          PATH=$HOME/${{ matrix.branch }}/bin:$PATH $HOME/${{ matrix.branch }}/bin/Mtest.py -r --debug=0
+          PATH=$HOME/${{ matrix.branch }}/bin:$PATH $HOME/${{ matrix.branch }}/bin/Mtest.py -r --debug=0 || true
           ls $HOME/${{ matrix.branch }}/mTests/times.lst
       - name: Publish mtest results
         uses: actions/upload-artifact@v3
         with:
           name: mtest-${{ matrix.branch }}
-          path: ${{ matrix.branch }}/mTests
+          path: ${{ matrix.branch }}/mTests/*
