Added flag --ci to help with continuous integration. Like former --jenkins flag.

--- a/testing/Mtest.py.in
+++ b/testing/Mtest.py.in
@@ -3489,6 +3489,7 @@ def main(argv) :
     parser.add_argument('--single-in-memory', action='store_true', dest='single_in_memory', help='use --in-memory for SingleServer directories')
     parser.add_argument('--approve', action='store_true', help='produce .newtest file in testing directory with calculated content')
     parser.add_argument('--stop-at-crash', action='store_true', dest='stop_crash', help='stop testing when the server crashes')
+    parser.add_argument('--ci', action='store_true', dest='ci', help='special handling for continuous integration (no error return unless serious problem)')
     global produce_html
     if produce_html:
         parser.add_argument('--no-html', action='store_false', dest='produce_html', help='do not produce HTML files')
@@ -4309,7 +4310,7 @@ VALUES (%s, '%s', '%s', '%s',
 """)
             else:
                 print("No differences encountered during testing.")
-        sys.exit(1 if Failed or errseen else 0)
+        sys.exit(1 if not opts.ci and (Failed or errseen) else 0)
 
     finally:
         # cleanup the place where we put our UNIX sockets
