Debugging help: tell OS the names of our threads.  The debuggers then show them.

--- a/monetdb_config.h.in
+++ b/monetdb_config.h.in
@@ -170,6 +170,7 @@
 #cmakedefine HAVE_UNAME 1
 // #cmakedefine HAVE_SEMTIMEDOP
 #cmakedefine HAVE_PTHREAD_KILL 1
+#cmakedefine HAVE_PTHREAD_SETNAME_NP 1
 #cmakedefine HAVE_PTHREAD_SIGMASK 1
 #cmakedefine HAVE_GETOPT 1
 // End Section: monetdb configure defines
