set CC for macos compiler detection

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -68,7 +68,7 @@ jobs:
         run: |
           mkdir build
           cd build 
-          cmake .. \
+          CC=${{ matrix.c_compiler }} cmake .. \
             -DCMAKE_INSTALL_PREFIX=$HOME/${{ matrix.branch }} \
             -DPY3INTEGRATION=OFF \
             -DRINTEGRATION=OFF  \
