--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,7 +25,7 @@ jobs:
           - os: macos-latest
             c_compiler: clang
           - os: macos-latest
-            c_compiler: gcc
+            c_compiler: gcc-12
           - os: ubuntu-latest
             c_compiler: gcc
           - os: ubuntu-latest
@@ -37,6 +37,8 @@ jobs:
             c_compiler: clang
           - os: macos-latest
             c_compiler: cl
+          - os: macos-latest
+            c_compiler: gcc
           - os: ubuntu-latest
             c_compiler: cl
     runs-on: ${{ matrix.os }}
@@ -69,7 +71,7 @@ jobs:
         run: |
           mkdir build
           cd build 
-          CC=${{ matrix.c_compiler }} cmake .. \
+          cmake .. \
             -DCMAKE_INSTALL_PREFIX=$HOME/${{ matrix.branch }} \
             -DPY3INTEGRATION=OFF \
             -DRINTEGRATION=OFF  \
@@ -85,14 +87,7 @@ jobs:
         run: |
           mkdir build
           cd build 
-          cmake .. \
-            -DCMAKE_INSTALL_PREFIX=$HOME/${{ matrix.branch }} \
-            -DPY3INTEGRATION=OFF \
-            -DRINTEGRATION=OFF  \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DASSERT=OFF \
-            -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
-            -DCMAKE_SUMMARY=ON
+          cmake ..  -DCMAKE_INSTALL_PREFIX=$HOME/${{ matrix.branch }} -DPY3INTEGRATION=OFF -DRINTEGRATION=OFF  -DCMAKE_BUILD_TYPE=Release -DASSERT=OFF -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}  -DCMAKE_SUMMARY=ON
           make install -j3
         if: runner.os == 'Windows'
 
