--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -113,4 +113,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: mtest-${{ matrix.branch }}
-          path: $HOME/${{ matrix.branch }}/mTests/*
+          path: $HOME/${{ matrix.branch }}/mTests/times.lst
