install pcre getopt on windows

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -84,7 +84,9 @@ jobs:
         if: runner.os == 'macOS'
 
       - name: choco packages
-        run: choco install winflexbison3
+        run: |
+          choco install winflexbison3
+          vcpkg install pcre getopt
         if: runner.os == 'Windows'
 
       - name: make MonetDB on Windows
